feat: cards in DOM with pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Our Team</title>
 </head>
 <body>
-    
+    <h1 class="text-center pt-5 pb-3">Our Team</h1>
+    <p class="text-center col-6 offset-3 pb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, ducimus eum sint quos possimus earum doloribus nostrum voluptatem aut. Est asperiores optio laudantium natus mollitia eum possimus vero reprehenderit accusamus!</p>
     <script src="js/main.js"></script>
 </body>
 </html>
