--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- my css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Our Team</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="text-center pt-5 pb-3">Our Team</h1>
-    <p class="text-center col-6 offset-3 pb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate, ducimus eum sint quos possimus earum doloribus nostrum voluptatem aut. Est asperiores optio laudantium natus mollitia eum possimus vero reprehenderit accusamus!</p>
+    <p class="text-center col-6 offset-3 pb-2">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate,
+      ducimus eum sint quos possimus earum doloribus nostrum voluptatem aut. Est
+      asperiores optio laudantium natus mollitia eum possimus vero reprehenderit
+      accusamus!
+    </p>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
